<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="myportifolio.com.udacity.csilva2810.myportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/my_nanodegree_apps" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_popular_movies"
        android:text="@string/popular_movies" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_stock_hawk"
        android:text="@string/stock_hawk" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_build_it_bigger"
        android:text="@string/build_it_bigger" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_make_app_material"
        android:text="@string/make_your_app_material" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_go_ubiquitous"
        android:text="@string/go_ubiquitous" />

    <Button
        style="@style/ButtonPrimary"
        android:id="@+id/bt_capstone"
        android:text="@string/capstone" />

</LinearLayout>
